--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -22,19 +22,39 @@ position: relative;
     height: 15px;
     margin-left: 10px;
     content: '&darr;';
+    transition: 500ms;
+    
 }
  .navigatin-categiries-item{
     border-bottom: 1px solid #000;
     text-align-last: left;
     padding: 5px;
 }
+
+.navigatin-categiries-item:hover{
+background: #fff;
+}
+
 .navigatin-categiries{
-position: absolute;
-left: 0;
-top: 40px;
-width: 100%;
-z-index: 5;
-background:#fff;
+display: none;
+}
+
+.nav-item:hover{
+    background:#dbd9d9
+}
+.nav-item:hover .navigatin-categiries{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 40px;
+    width: 100%;
+    z-index: 5;
+    background:#dbd9d9;
+}
+
+.nav-item:hover .nav-arrow_down{
+    
+    transform: translate( 0, 10px);
 
 }
 
