adeed button component

--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -7,7 +7,7 @@ button {
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20px; /* 142.857% */
+    line-height: 20px;
     text-transform: uppercase;
 }
 .button {
