--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -3,15 +3,22 @@
     justify-content: center;
     flex-wrap: wrap;
     position: relative;
-    
+    font-family: 'Lato';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
 }
 
 .nav-item {
-    padding: 10px;
+    padding: 10px 0;
     margin: 10px;
     display: flex;
     position: relative;
     text-transform: capitalize;
+    width: 110px;
+    justify-content: center;
 }
 
 .navigation a {
@@ -25,6 +32,7 @@
     margin-left: 10px;
     content: '&darr;';
     transition: 500ms;
+
 
 }
 
