--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -9,13 +9,29 @@ button {
     font-weight: 500;
     line-height: 20px;
     text-transform: uppercase;
+    cursor: pointer;
 }
 .button {
     background-color: #4172DC;
 }
 .submitButton{
-
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), #4172DC;
 }
 .resetButton {
+    background-color: #434343;
+}
 
+
+.button1 { 
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.20) 0%, rgba(255, 255, 255, 0.20) 100%), #4172DC;
+}
+.disabled{
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.20) 0%, rgba(255, 255, 255, 0.20) 100%),#C4C4C4;
+}
+.button3 {
+    border: 1px solid #434343;
+    color: #555;
+}
+.button4{
+    background: #7B7B7B;
 }
