--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,4 @@
-.header {
+.head {
     display: flex;
     min-height: 96px;
     padding: var(--spacing-7, 28px) 90px;
@@ -8,6 +8,4 @@
     align-self: stretch;
     flex-wrap: wrap;
     justify-content: space-around;
-    background: rgb(226, 224, 224);
-
 }
