--- a/src/components/Products/products.module.css
+++ b/src/components/Products/products.module.css
@@ -1,54 +1,11 @@
 .products{
     font-size: 20px;
-    display: flex;
+    /* display: flex; */
 }
 .desserts-list{
-    display: flex;
-    flex-direction: row;
-    margin: 40px;
-    justify-content: space-between;
-    padding-left: 150px;
-}
-
-.dessert-card{
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center;
-    border: 1px silver solid;
-    border-radius: 5px;
-    height: 400px;
-    width: 350px;
-    padding: 25px;
-    margin-right: 50px;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-}
-.dessert-card p{
-    font-size: 15px;
-    text-align: center;
-    justify-content: space-between;
-}
-
-.dessert-card h3{
-    font-size: 20px;
-    margin-bottom: 10px; 
-    
-}
-.dessert-card .dessertImage{
-    height: 150px;
-    width: 150px;
-    align-self: center; 
-    margin-bottom: 10px;
-}
-.order-button{
-    border: 1px solid silver;
-    background-color: silver;
-    width: 120px;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: auto; 
-    font-size: 15px
-}
-.price{
-    padding: 15px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    margin: 40px 0;
+    grid-gap: 20px 0;
 }
