--- a/src/components/Products/products.module.css
+++ b/src/components/Products/products.module.css
@@ -1,11 +1,10 @@
 .products{
     font-size: 20px;
-    /* display: flex; */
 }
 .desserts-list{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     justify-items: center;
     margin: 40px 0;
-    grid-gap: 20px 0;
+    grid-gap: 20px;
 }
