--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -38,7 +38,7 @@
 
 .navigatin-categiries-item {
     border-bottom: 1px solid #000;
-    text-align-last: left;
+    text-align: left;
     padding: 5px;
 }
 
