--- a/src/components/Categories/categories.module.css
+++ b/src/components/Categories/categories.module.css
@@ -1,3 +1,10 @@
 .common {
-    padding: 10px 100px;
+    padding-top: 100px;
+    /* padding: 10px 100px; */
+    display: flex;
+    /* justify-content: space-around; */
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    /* gap: 200px; */
+    gap: 20px;
 }
