added catecories card Name

--- a/src/components/CategoriesValentine/categoriesValentine.module.css
+++ b/src/components/CategoriesValentine/categoriesValentine.module.css
@@ -1,7 +1,7 @@
 .common {
     height: 100%;
     padding-top: 100px;
-    /* padding: 10px 100px; */
+    padding: 10px 90px;
     display: flex;
     /* justify-content: space-around; */
     flex-wrap: wrap;
