--- a/src/components/CategoriesCard/categoriesCard.module.css
+++ b/src/components/CategoriesCard/categoriesCard.module.css
@@ -1,19 +1,21 @@
 .common {
     width: 250px;
-    height: 129px;
+   
     padding: 10px;
     border-radius: 2px;
     box-shadow: 1px 1px 4px rgba(123, 120, 126, 0.89);
-    /* background: silver url(../../images/sub-banner-1.jpg); */
-    background-color: silver;
+    background: silver url(../../images/sub-banner-1.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     font-family: 'Open Sans', sans-serif;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-self:stretch;
+justify-content: space-between;
+   
+ 
 
     /* margin: 0 auto; */
 }
@@ -45,7 +47,13 @@ a.demo-link:hover {
 a.demo-link:active {
     color: rgb(118, 61, 61);
 }
-button{
-    background: grey;
-    color:black
+.common button {
+    background: rgb(218, 215, 215);
+    color:black;
+    border: 1px solid grey;
+    text-transform: capitalize;
+    padding: 7px;
+    font-size: 16px;
+    line-height: 16px;
+    width: min-content;
 }
