--- a/src/components/Categories/categories.module.css
+++ b/src/components/Categories/categories.module.css
@@ -7,5 +7,7 @@
     flex-wrap: wrap;
     /* justify-content: center; */
     /* gap: 200px; */
-    gap: 20px;
+    gap: 30px;
+justify-content: center;
+align-items: center;
 }
