--- a/src/components/Blog/blog.module.css
+++ b/src/components/Blog/blog.module.css
@@ -8,6 +8,8 @@
 .blogPost {
   border: 1px solid #ddd;
   padding: 15px;
+  display: inline-block;
+  text-align: center;
   margin-bottom: 20px;
   border-radius: 8px;
   background-color: #fff;
@@ -20,6 +22,9 @@
 .blogPost p {
   margin: 10px 0;
   color: #666;
+}
+.blogPost img {
+  width: 200px;
 }
 
 .loading {
@@ -35,3 +40,35 @@
   margin-top: 20px;
   color: #ff0000;
 }
+
+button{
+        width: 120px;
+        padding:10px 10px;
+        margin: 0 auto;
+        border: none;
+        display: block;
+        font-size: 14px;
+        font-weight: 800;
+        border-radius: 5px;
+        opacity: 0.9;
+        text-transform: capitalize;
+        transition: background-color 0.3s ease;
+        cursor: pointer;
+        background-color: blue;
+        color: white;
+}
+    button:hover{
+        opacity: 0.6;
+    }
+    .green {
+      background-color: Green;
+      color: white;
+    }
+    .secondary {
+      background-color: #645c5c;
+      color: white;
+    }
+    .error {
+      background-color: red;
+      color: white;
+    }
