--- a/src/components/AddCategoriesFormValentine/addCategoriesFormValentine.module.css
+++ b/src/components/AddCategoriesFormValentine/addCategoriesFormValentine.module.css
@@ -28,7 +28,7 @@ input {
     box-shadow: none;
 }
 
-button {
+.btn-add {
     margin-top: 30px;
     background-color: #ee7560;
     cursor: pointer;
