--- a/src/components/CategoriesCardValentine/categoriesCardV.module.css
+++ b/src/components/CategoriesCardValentine/categoriesCardV.module.css
@@ -49,3 +49,22 @@ a.demo-link:hover {
 a.demo-link:active {
     color: rgb(118, 61, 61);
 }
+
+
+/* Button */
+.btn-card {
+    width: 76px;
+    padding: 0;
+    font-size: 16px;
+    background-color: rgba(28,28,28,0);
+    /* border: solid 1px #ee7560; */
+    color: #ee7560;
+    text-decoration-line: underline;
+    transition: color 0.3s ease-in-out, font-size 0.3s ease-in-out;
+}
+.btn-card:hover {
+    background-color: rgba(28,28,28,0);
+    text-decoration: none;
+    color: rgb(33, 33, 33);
+    font-size: 20px;
+}
