--- a/src/components/Categories/categories.module.css
+++ b/src/components/Categories/categories.module.css
@@ -1,3 +1,8 @@
-.common {
+.categories {
     padding: 10px 100px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
