--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,71 +1,53 @@
-.navigation {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    position: relative;
-    font-family: 'Lato';
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: center;
+.navigation{
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+position: relative;
 }
-
-.nav-item {
-    padding: 10px 0;
+.nav-item{
+    padding: 10px;
     margin: 10px;
+    border-bottom: 1px solid #000;
     display: flex;
     position: relative;
-    text-transform: capitalize;
-    width: 110px;
-    justify-content: center;
 }
 
-.navigation a {
-    text-decoration: none;
-    color: black;
+.navigation a{
+   text-decoration: none;
+   color: black;
 }
 
-.nav-arrow_down {
+.nav-arrow_down{
     width: 15px;
     height: 15px;
     margin-left: 10px;
     content: '&darr;';
     transition: 500ms;
-
-
+    
 }
-
-.navigatin-categiries-item {
+ .navigatin-categiries-item{
     border-bottom: 1px solid #000;
     text-align-last: left;
     padding: 5px;
 }
+.navigatin-categiries{
 
-.navigatin-categiries-item:hover {
-    background: #fff;
+display: none;
 }
-
-.navigatin-categiries {
-    display: none;
+.nav-item:hover{
+    background:#dbd9d9
 }
-
-.nav-item:hover {
-    background: #dbd9d9
-}
-
-.nav-item:hover .navigatin-categiries {
+.nav-item:hover .navigatin-categiries{
     display: block;
     position: absolute;
     left: 0;
     top: 40px;
     width: 100%;
     z-index: 5;
-    background: #dbd9d9;
+    background:#dbd9d9;
 }
 
-.nav-item:hover .nav-arrow_down {
-
-    transform: translate(0, 10px);
-
+.nav-item:hover .nav-arrow_down{
+    transform: translate( 0, 10px);
 }
+
