--- a/src/components/BlogCard/blogcard.module.css
+++ b/src/components/BlogCard/blogcard.module.css
@@ -1,16 +1,10 @@
 
-.blogContainer {
-  max-width: fit-content;
-  margin: 0 auto;
-  padding: 20px;
-}
-
 .blogPost {
   border: 1px solid #ddd;
   padding: 15px;
   display: inline-block;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 10px;
   border-radius: 8px;
   background-color: #fff;
 }
