--- a/src/components/ProductCardLera/product-card-lera.module.css
+++ b/src/components/ProductCardLera/product-card-lera.module.css
@@ -39,7 +39,7 @@
 	background-color: rgba(0, 0, 0, .7);
 	width: 100%;
 	height: 100vh;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	display: flex;
