--- a/src/components/CategoriesCardValentine/categoriesCardV.module.css
+++ b/src/components/CategoriesCardValentine/categoriesCardV.module.css
@@ -81,7 +81,7 @@ button {
 .delete {
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 1px 1px 4px rgba(123, 120, 126, 0.89);
-	width: 40%;
+	width: 200px;
 	height: 45vh;
     padding: 10px;
 	position: absolute;
