--- a/src/components/ProductCardJu/productcardJu.module.css
+++ b/src/components/ProductCardJu/productcardJu.module.css
@@ -4,7 +4,6 @@
     align-items: center; 
     border: 1px silver solid;
     border-radius: 5px;
-    height: 400px;
     width: 300px;
     padding: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
@@ -23,4 +22,24 @@
 }
 .price{
     padding: 15px;
+}
+
+.hidden {
+	display: none;
+}
+.edit {
+	display: block;
+}
+
+.delete {
+	font-size: 30px;
+	background-color: rgba(0, 0, 0, .7);
+	width: 100%;
+	height: 100px;
+	position: fixed;
+    color: white;
+	display: flex;
+    flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
