--- a/src/components/CategoriesCardValentine/categoriesCardV.module.css
+++ b/src/components/CategoriesCardValentine/categoriesCardV.module.css
@@ -81,12 +81,18 @@ button {
 .delete {
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 1px 1px 4px rgba(123, 120, 126, 0.89);
-	width: 200px;
+	/* width: 200px;
 	height: 45vh;
     padding: 10px;
 	position: absolute;
 	top: 25%;
-	left: 29%;
+	left: 29%; */
+    width: 500px;
+	height: 60vh;
+    padding: 20px;
+	position: absolute;
+	top: 50px;
+	left: -250px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
