--- a/src/components/CategoriesCardJu/CategoriesCardJu.module.css
+++ b/src/components/CategoriesCardJu/CategoriesCardJu.module.css
@@ -1,25 +1,23 @@
 .common {
-    width: 250px; 
-    padding: 10px;
+    width: 350px;
+    height: 199px;
+    padding: 15px;
+    margin-top: 50px;
     border-radius: 2px;
     box-shadow: 1px 1px 4px rgba(123, 120, 126, 0.89);
-    background: silver url(../../images/sub-banner-1.jpg);
+    background-color: silver;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     font-family: 'Open Sans', sans-serif;
+
     display: flex;
     flex-direction: column;
-    align-self:stretch;
     justify-content: space-between;
-    box-shadow: 2px 2px 14px grey;
 }
-.common:hover{
-    transform: scale3d(0.9);
-    transition: 500ms;
-}
+
 .common h3 {
-    width: 110px;
+    width: 200px;
     text-align: left;
     letter-spacing: 0;
     line-height: 29px;
@@ -45,33 +43,76 @@ a.demo-link:hover {
 a.demo-link:active {
     color: rgb(118, 61, 61);
 }
-.common button {
-    background: rgb(218, 215, 215);
-    color:black;
-    border: 1px solid grey;
-    text-transform: capitalize;
-    padding: 7px;
+
+.btn-card {
+    width: 76px;
+    padding: 0;
     font-size: 16px;
-    line-height: 16px;
-    width: max-content;
-    margin: 5px;
+    background-color: rgba(28,28,28,0);
+    color: #ee7560;
+    text-decoration-line: underline;
+    transition: color 0.3s ease-in-out, font-size 0.3s ease-in-out;
+}
+.btn-card:hover {
+    background-color: rgba(28,28,28,0);
+    text-decoration: none;
+    color: rgb(33, 33, 33);
+    font-size: 20px;
+}
+button {
+    width: 110px;
+    margin: 0;
+    margin-top: 10px;
 
 }
 
-.edit-card{
+.delete {
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 1px 1px 4px rgba(123, 120, 126, 0.89);
+	width: 40%;
+	height: 45vh;
+    padding: 10px;
+	position: absolute;
+	top: 25%;
+	left: 29%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.delete h2 {
+    margin: 20px;
+    font-size: 30px;
+    text-align: center;
+    color: rgba(123, 120, 126, 0.89);
+}
+.delete button {
+    margin-bottom: 5px;
+}
+.edit{
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px rgba(123, 120, 126, 0.89);
+    background-color: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    z-index: 15;
+    gap: 10px;
+    position: absolute;
     padding: 20px;
-    border: 1px solid black;
+    font-size: 25px;
     top:20vh;
     left: 40vw;
-    background: rgb(231, 229, 229);
-   
+    color: rgba(123, 120, 126, 0.89);
 }
-.hidden{
+.edit label {
+    font-size: 20px;
+    color: rgba(123, 120, 126, 0.89);
+}
+.edit input {
+    font-size: 18px;
+    font-weight: 600;
+}
+.hidden {
     display: none;
 }
